<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:layout_height="match_parent"
    android:background="#1818EE"
    tools:context=".ThirdScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="106dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="142dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/secondpage" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:rowCount="5"
        android:columnCount="1"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/major"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/now"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/major"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/from"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/major"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/want"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/major"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/Family"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/major"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="69dp"
                    android:text="@string/Else"
                    android:textColor="#1818EE"
                    android:textSize="22dp"
                    android:padding="10dp">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>